--- a/imgui.ini
+++ b/imgui.ini
@@ -12,5 +12,10 @@ Size=305,556
 
 [Window][##Command UI]
 Pos=879,10
-Size=500,624
+Size=500,664
+
+[Window][Selection]
+Pos=1343,694
+Size=500,98
+Collapsed=1
 
