--- a/examples/imgui.ini
+++ b/examples/imgui.ini
@@ -8,13 +8,17 @@ Size=305,156
 
 [Window][Structures]
 Pos=10,186
-Size=305,524
+Size=305,820
 
 [Window][##Command UI]
-Pos=770,10
-Size=500,694
+Pos=1343,10
+Size=500,120
 
 [Window][Selection]
 Pos=770,724
 Size=500,98
+
+[Window][plot]
+Pos=369,67
+Size=563,852
 
