--- a/examples/imgui.ini
+++ b/examples/imgui.ini
@@ -8,17 +8,17 @@ Size=305,156
 
 [Window][Structures]
 Pos=10,186
-Size=305,820
+Size=305,815
 
 [Window][##Command UI]
-Pos=1343,10
-Size=500,120
+Pos=1344,10
+Size=500,232
 
 [Window][Selection]
-Pos=770,724
+Pos=1410,262
 Size=500,98
 
 [Window][plot]
-Pos=369,67
-Size=563,852
+Pos=281,-7
+Size=751,1202
 
