--- a/examples/imgui.ini
+++ b/examples/imgui.ini
@@ -8,17 +8,30 @@ Size=305,156
 
 [Window][Structures]
 Pos=10,186
-Size=305,815
+Size=305,847
 
 [Window][##Command UI]
-Pos=1344,10
-Size=500,232
+Pos=1410,10
+Size=500,428
 
 [Window][Selection]
-Pos=1410,262
+Pos=1410,436
 Size=500,98
+Collapsed=1
 
 [Window][plot]
-Pos=281,-7
-Size=751,1202
+Pos=331,-257
+Size=809,1437
+
+[Window][Controls]
+Pos=325,10
+Size=440,378
+
+[Window][Scene]
+Pos=60,60
+Size=178,81
+
+[Window][Scene Final]
+Pos=60,60
+Size=178,81
 
