--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+./evaluation/parahome_data_slide
+./evaluation/parahome_data_thesis
+
 # Distribution / packaging
 .Python
 build/
